# aiortc-example

./: README.md  compose.yml  mise.toml
server/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
server/src/: detect.py  server.py
web/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.css  App.tsx
