[project]
name = "aiortc-example-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "aiortc>=1.11.0",
    "numpy>=2.1.1",
    "opencv-python-headless>=4.11.0.86",
    "ultralytics>=8.3.107",
]
