[project]
name = "aiortc-example-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.16",
    "aiortc>=1.11.0",
    "numpy>=2.1.1",
    "opencv-python-headless>=4.11.0.86",
    "ultralytics>=8.3.107",
    "torch==2.5.1+cu124; sys_platform == 'linux' or sys_platform == 'win32'",
    "torchvision==0.20.1+cu124; sys_platform == 'linux' or sys_platform == 'win32'",
    "torch==2.5.1; sys_platform == 'darwin'",
    "torchvision==0.20.1; sys_platform == 'darwin'"
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
